# S25u

./: 1.sh  build_kernel_GKI.sh  list_800.tmp
.github/workflows/: 25.yml  Build.yml  Cs.yml  Kernel.yml  ma0in.yml  main.yml  meain.yml  mmain.yml
kernel_platform/: bazel-bin  bazel-kernel_platform  bazel-out  bazel-testlogs  files_gki_aarch64_gen.txt
kernel_platform/common/: S25.config  localversion
kernel_platform/common/arch/arm64/configs/: gki_defconfig
kernel_platform/common/drivers/android/: binder.c
kernel_platform/common/drivers/staging/android/: Kconfig  Makefile  monitor.c
kernel_platform/common/include/linux/: monitor.h
kernel_platform/common/scripts/: sec_env.mk
kernel_platform/kernel/: build.config.sh
kernel_platform/msm-kernel/: .legofile  build.config.sec_env  build_with_bazel.py  lego.bzl  lego_dtbo  lego_module  sec_ipc.bzl
kernel_platform/msm-kernel/arch/arm64/configs/: gki_defconfig  lego.config
kernel_platform/msm-kernel/drivers/: Kconfig  Makefile
kernel_platform/msm-kernel/drivers/adsp_factory/: accel_highg_factory.c  back_tap.c
kernel_platform/msm-kernel/drivers/battery/wireless/: stwlc89_charger.dtsi
kernel_platform/prebuilts/asuite/: OWNERS  OWNERS_ADTE_TEAM  release_checker.py
kernel_platform/prebuilts/asuite/acloud/linux-x86/: acloud
kernel_platform/prebuilts/asuite/aidegen/linux-x86/: aidegen
kernel_platform/prebuilts/asuite/atest/: OWNERS  smoke_tests
kernel_platform/prebuilts/build-tools/: BUILD.bazel  build-prebuilts.sh  manifest.xml
kernel_platform/prebuilts/clang-tools/: BUILD.bazel  manifest.xml
kernel_platform/prebuilts/clang-tools/linux-x86/: clang-headers
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/: BUILD.bazel
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/sysroot/usr/include/: stdint.h
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/sysroot/usr/include/i386-linux-gnu/bits/: fcntl-linux.h  mman.h  socket.h
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/sysroot/usr/include/linux/: audit.h  capability.h  elf.h  netfilter.h  random.h  seccomp.h
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/sysroot/usr/include/x86_64-linux-gnu/asm/: unistd_64.h
kernel_platform/prebuilts/gcc/linux-x86/host/x86_64-linux-glibc2.17-4.8/sysroot/usr/include/x86_64-linux-gnu/bits/: mman.h
kernel_platform/prebuilts/kernel-build-tools/: BUILD.bazel  OWNERS  build-prebuilts.sh  manifest.xml  update-bazel.sh
kernel_platform/prebuilts/ndk-r26/: CHANGELOG.md  NOTICE.toolchain  source.properties
kernel_platform/prebuilts/rust/: OWNERS  TEST_MAPPING
kernel_platform/prebuilts/rust/soong/: rustprebuilts.go
kernel_platform/prebuilts/tradefed/filegroups/: PREBUILT
(+342 files in other folders)
